--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^12.0.1",
-        "tailwindcss": "^2.0.1"
+        "tailwindcss": "^2.0.2"
+    },
+    "dependencies": {
+        "tailwind": "^4.0.0"
     }
 }
