--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "tailwindcss": "^2.0.2"
     },
     "dependencies": {
+        "datatables.net": "^1.10.23",
+        "datatables.net-dt": "^1.10.23",
         "tailwind": "^4.0.0"
     }
 }
